--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@ body, html {
 	-o-font-smoothing: antialiased;
 	font-smoothing: antialiased;
 	background: #f5f7f8;
+	box-sizing: border-box;
 }
 
 a {
@@ -77,6 +78,32 @@ a:visited {
 	position: relative;
 }
 
+#blocker {
+	position: fixed;
+	z-index: 10000;
+	background-color: #2a3744;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	display: none;
+}
+
+#blocker div {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	font-size: 36px;
+	font-weight: 700;
+	color: white;
+	text-align: center;
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-moz-transform: translateX(-50%) translateY(-50%);
+	transform: translateX(-50%) translateY(-50%);
+}
+
 /******** NAVBAR ********/
 
 #sidebar_container {
@@ -117,7 +144,7 @@ a:visited {
 }
 
 .icon {
-	opacity: 0.4;
+	opacity: 0.3;
 	margin-right: 8px;
 }
 
@@ -174,12 +201,13 @@ p {
 
 .section_content {
     font-size: 16px;
-    /* padding: 20px; */
     box-sizing: border-box;
-   
-    /* box-shadow: 0 1px 1px rgba(0,0,0,0.2); */
     border-radius: 3px;
     padding-top: 10px;
+}
+
+#instructor:hover {
+	text-decoration: underline;
 }
 
 .section_content b {
@@ -187,7 +215,7 @@ p {
 }
 
 .homework_box {
-    width: 31%;
+    width: 31.33%;
     float: left;
     margin-bottom: 3%;
     border-radius: 3px;
@@ -226,8 +254,8 @@ p {
     font-weight: 700;
     color: #196e76;
     letter-spacing: 0.1rem;
-    font-size: 12px;
-    margin: 4px 20px;
+    font-size: 11px;
+    margin-top: 6px;
 }
 
 .homework_item {
@@ -240,19 +268,44 @@ p {
 	text-decoration: underline;
 }
 
-.note_container:first-child {
-	margin-top: 0;
+#note_content a {
+	float: left;
+	width: 49%;
 }
 
-
-.content:last-child, .note_container:last-child {
-	margin-bottom: 0;
+#note_content a:nth-child(2n) {
+	margin-left: 2%;
 }
 
 .note_container {
 	margin: 10px 0;
-	border-bottom: 2px solid rgba(218, 225, 229, 0.33);
-	width: 700px;
-	padding: 10px 0;
+	
+	padding: 10px;
 	cursor: pointer;
+	font-size: 16px;
+	background: #fff;
+	font-weight: 400;
+	border-radius: 3px;
+	box-shadow: 0 1px 1px rgba(0,0,0,0.2);
+	box-sizing: border-box;
+}
+
+.note_container b {
+	font-weight: 700;
+}
+
+.note_container .fa {
+	margin-right: 3px;
+}
+
+@media (max-width: 1229px) {
+	#note_content a {
+		float: none;
+	}
+}
+
+@media (max-width: 960px) {
+	#blocker {
+		display: block;
+	}
 }
